==> AmbiqAI/ambiqzephyr/drivers/usb/device/usb_dc_apollo4p.c <==
#include <soc.h>
#include "am_mcu_apollo.h"
#include <string.h>
#include <zephyr/usb/usb_device.h>
#include <zephyr/drivers/clock_control/clock_control_ambiq.h>
#include <zephyr/sys/util.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/pinctrl.h>
#define LOG_LEVEL CONFIG_USB_DRIVER_LOG_LEVEL
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#define DT_DRV_COMPAT    ambiq_apollo4p_usb
#define USB_IRQ_NAME     usb
#define USB_VBUS_SENSING false
#define USB_BASE_ADDRESS	DT_INST_REG_ADDR(0)
#define USB_IRQ			DT_INST_IRQ_BY_NAME(0, USB_IRQ_NAME, irq)
#define USB_IRQ_PRI		DT_INST_IRQ_BY_NAME(0, USB_IRQ_NAME, priority)
#define USB_NUM_BIDIR_ENDPOINTS	DT_INST_PROP(0, num_bidir_endpoints)
#define USB_RAM_SIZE		DT_INST_PROP(0, ram_size)
#define USB_MAXIMUM_SPEED	DT_INST_PROP(0, maximum_speed)
#define EP0_MPS 64U
#define EP_MPS 64U
#define USB_BTABLE_SIZE  (8 * USB_NUM_BIDIR_ENDPOINTS)
#define SETUP_SIZE 8
#define EP0_IDX 0
#define EP0_IN (EP0_IDX | USB_EP_DIR_IN)
#define EP0_OUT (EP0_IDX | USB_EP_DIR_OUT)

int usb_dc_attach(void)
{
    int ret;

    LOG_DBG("");

    ret = usb_dc_apollo4p_init();
    if (ret) {
        return ret;
    }

    return 0;
}

int usb_dc_ep_set_callback(const uint8_t ep, const usb_dc_ep_callback cb)
{
    struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

    LOG_DBG("ep 0x%02x", ep);

    if (!ep_state) {
        return -EINVAL;
    }

    ep_state->cb = cb;

    return 0;
}

void usb_dc_set_status_callback(const usb_dc_status_callback cb)
{
    LOG_DBG("");

    usb_dc_apollo4p_state.status_cb = cb;
}

int usb_dc_set_address(const uint8_t addr)
{
    LOG_DBG("addr %u (0x%02x)", addr, addr);

    // Response with status first before changing device address
    am_hal_usb_ep_xfer(pUSBHandle, EP0_IN, NULL, 0);

    am_hal_usb_set_addr(pUSBHandle, addr);
    am_hal_usb_set_dev_state(pUSBHandle, AM_HAL_USB_DEV_STATE_ADDRESSED);

    return 0;
}

int usb_dc_ep_start_read(uint8_t ep, uint8_t *data, uint32_t max_data_len)
{
	uint32_t status;

	LOG_DBG("ep 0x%02x, len %u", ep, max_data_len);

	/* we flush EP0_IN by doing a 0 length receive on it */
	if (!USB_EP_DIR_IS_OUT(ep) && (ep != EP0_IN || max_data_len)) {
		LOG_ERR("invalid ep 0x%02x", ep);
		return -EINVAL;
	}

	if (max_data_len > EP_MPS) {
		max_data_len = EP_MPS;
	}

    status = am_hal_usb_ep_xfer(pUSBHandle, ep,
                        usb_dc_apollo4p_state.ep_buf[USB_EP_GET_IDX(ep)],
                        max_data_len);

	if (status != AM_HAL_STATUS_SUCCESS) {
		LOG_ERR("am_hal_usb_ep_xfer failed(0x%02x), %d", ep,
			(int)status);
		return -EIO;
	}

	return 0;
}

int usb_dc_ep_configure(const struct usb_dc_ep_cfg_data * const ep_cfg)
{
	uint8_t ep = ep_cfg->ep_addr;
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	if (!ep_state) {
		return -EINVAL;
	}

	LOG_DBG("ep 0x%02x, previous ep_mps %u, ep_mps %u, ep_type %u",
		ep_cfg->ep_addr, ep_state->ep_mps, ep_cfg->ep_mps,
		ep_cfg->ep_type);

	if (ep_cfg->ep_mps > ep_state->ep_pma_buf_len) {
		if (USB_RAM_SIZE <=
		    (usb_dc_apollo4p_state.pma_offset + ep_cfg->ep_mps)) {
			return -EINVAL;
		}
/*        am_hal_usb_ep_init((void *) pUSBHandle,
                                      (ep_cfg->ep_addr & 0x7F),
                                      ((ep_cfg->ep_addr & 0x80) >> 7),
                                      ep_cfg->ep_mps);*/
		ep_state->ep_pma_buf_len = ep_cfg->ep_mps;
		usb_dc_apollo4p_state.pma_offset += ep_cfg->ep_mps;
	}
	ep_state->ep_mps = ep_cfg->ep_mps;

	switch (ep_cfg->ep_type) {
	case USB_DC_EP_CONTROL:
		ep_state->ep_type = 0;//EP_TYPE_CTRL;
		break;
	case USB_DC_EP_ISOCHRONOUS:
		ep_state->ep_type = 1;//EP_TYPE_ISOC;
		break;
	case USB_DC_EP_BULK:
		ep_state->ep_type = 2;//EP_TYPE_BULK;
		break;
	case USB_DC_EP_INTERRUPT:
		ep_state->ep_type = 3;//EP_TYPE_INTR;
		break;
	default:
		return -EINVAL;
	}

	return 0;
}

int usb_dc_ep_set_stall(const uint8_t ep)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	LOG_DBG("ep 0x%02x", ep);

	if (!ep_state) {
		return -EINVAL;
	}

    am_hal_usb_ep_stall(pUSBHandle, ep);

	ep_state->ep_stalled = 1U;

	return 0;
}

int usb_dc_ep_clear_stall(const uint8_t ep)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	LOG_DBG("ep 0x%02x", ep);

	if (!ep_state) {
		return -EINVAL;
	}

    am_hal_usb_ep_clear_stall(pUSBHandle, ep);

	ep_state->ep_stalled = 0U;
	ep_state->read_count = 0U;

	return 0;
}

int usb_dc_ep_is_stalled(const uint8_t ep, uint8_t *const stalled)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	LOG_DBG("ep 0x%02x", ep);

	if (!ep_state || !stalled) {
		return -EINVAL;
	}

	*stalled = ep_state->ep_stalled;

	return 0;
}

int usb_dc_ep_enable(const uint8_t ep)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);
	uint32_t status;

	LOG_DBG("ep 0x%02x", ep);

	if (!ep_state) {
		return -EINVAL;
	}

	LOG_DBG("am_hal_usb_ep_init(0x%02x, %u, %u)", ep, ep_state->ep_mps,
		ep_state->ep_type);

	status = am_hal_usb_ep_init(pUSBHandle, ep,
				 ep_state->ep_mps, ep_state->ep_type);
	if (status != AM_HAL_STATUS_SUCCESS) {
		LOG_ERR("am_hal_usb_ep_init failed(0x%02x), %d", ep,
			(int)status);
		return -EIO;
	}

	return 0;
}

int usb_dc_ep_disable(const uint8_t ep)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	LOG_DBG("ep 0x%02x", ep);

	if (!ep_state) {
		return -EINVAL;
	}
	LOG_ERR("Not implemented");

	return 0;
}

int usb_dc_ep_write(const uint8_t ep, const uint8_t *const data,
		    const uint32_t data_len, uint32_t * const ret_bytes)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);
	uint32_t status;
	uint32_t len = data_len;
	int ret = 0;

	LOG_DBG("ep 0x%02x, len %u", ep, data_len);

	if (!ep_state || !USB_EP_DIR_IS_IN(ep)) {
		LOG_ERR("invalid ep 0x%02x", ep);
		return -EINVAL;
	}

	ret = k_sem_take(&ep_state->write_sem, K_NO_WAIT);
	if (ret) {
		LOG_ERR("Unable to get write lock (%d)", ret);
		return -EAGAIN;
	}

	if (!k_is_in_isr()) {
		irq_disable(USB_IRQ);
	}

	if (ep == EP0_IN && len > USB_MAX_CTRL_MPS) {
		len = USB_MAX_CTRL_MPS;
	}

    status = am_hal_usb_ep_xfer(pUSBHandle, ep, data, len);

	if (status != AM_HAL_STATUS_SUCCESS) {
		LOG_ERR("am_hal_usb_ep_xfer failed(0x%02x), %d", ep,
			(int)status);
		k_sem_give(&ep_state->write_sem);
		ret = -EIO;
	}

	if (!ret && ep == EP0_IN && len > 0) {
		/* Wait for an empty package as from the host.
		 * This also flushes the TX FIFO to the host.
		 */
		usb_dc_ep_start_read(ep, NULL, 0);
	}

	if (!k_is_in_isr()) {
		irq_enable(USB_IRQ);
	}

	if (!ret && ret_bytes) {
		*ret_bytes = len;
	}

	return ret;
}

int usb_dc_ep_read_wait(uint8_t ep, uint8_t *data, uint32_t max_data_len,
			uint32_t *read_bytes)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);
	uint32_t read_count;

	if (!ep_state) {
		LOG_ERR("Invalid Endpoint %x", ep);
		return -EINVAL;
	}

	read_count = ep_state->read_count;

	LOG_DBG("ep 0x%02x, %u bytes, %u+%u, %p", ep, max_data_len,
		ep_state->read_offset, read_count, data);

	if (!USB_EP_DIR_IS_OUT(ep)) { /* check if OUT ep */
		LOG_ERR("Wrong endpoint direction: 0x%02x", ep);
		return -EINVAL;
	}

	/* When both buffer and max data to read are zero, just ignore reading
	 * and return available data in buffer. Otherwise, return data
	 * previously stored in the buffer.
	 */
	if (data) {
		read_count = MIN(read_count, max_data_len);
		memcpy(data, usb_dc_apollo4p_state.ep_buf[USB_EP_GET_IDX(ep)] +
		       ep_state->read_offset, read_count);
		ep_state->read_count -= read_count;
		ep_state->read_offset += read_count;
	} else if (max_data_len) {
		LOG_ERR("Wrong arguments");
	}

	if (read_bytes) {
		*read_bytes = read_count;
	}

	return 0;
}

int usb_dc_ep_read_continue(uint8_t ep)
{
	struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

	if (!ep_state || !USB_EP_DIR_IS_OUT(ep)) { /* Check if OUT ep */
		LOG_ERR("Not valid endpoint: %02x", ep);
		return -EINVAL;
	}

	/* If no more data in the buffer, start a new read transaction.
	 * DataOutStageCallback will called on transaction complete.
	 */
	if (!ep_state->read_count) {
		usb_dc_ep_start_read(ep, usb_dc_apollo4p_state.ep_buf[USB_EP_GET_IDX(ep)],
				     EP_MPS);
	}

	return 0;
}

int usb_dc_ep_flush(const uint8_t ep)
{
    struct usb_dc_apollo4p_ep_state *ep_state = usb_dc_apollo4p_get_ep_state(ep);

    if (!ep_state) {
        return -EINVAL;
    }

    LOG_ERR("Not implemented");

    return 0;
}

int usb_dc_detach(void)
{
    //
    // detach from the host
    //
    am_hal_usb_detach(pUSBHandle);

    //
    // wait for any interrupts to happen and be processed
    //
    am_util_delay_ms(50);

    //
    // disable USB interrupts
    //
    am_hal_usb_intr_usb_disable(pUSBHandle,
                                (USB_INTRUSB_SOF_Msk |
                                 USB_INTRUSB_Reset_Msk |
                                 USB_INTRUSB_Resume_Msk |
                                 USB_INTRUSB_Suspend_Msk));

    //
    // disable high speed clock
    //
    am_hal_usb_dev_speed_e eUsbSpeed = AM_HAL_USB_SPEED_FULL;
    am_hal_usb_set_dev_speed(pUSBHandle, eUsbSpeed);

    //
    // disable HFCR2
    //
    usb_dc_apollo4p_setHFCR2(false);

    // power things down
    am_hal_usb_enable_phy_reset_override();
    am_hal_gpio_state_write(13, AM_HAL_GPIO_OUTPUT_CLEAR);
    am_hal_gpio_state_write(15, AM_HAL_GPIO_OUTPUT_CLEAR);
    am_util_delay_ms(50);
    am_hal_usb_power_control(pUSBHandle, AM_HAL_SYSCTRL_DEEPSLEEP, false);

    am_hal_usb_deinitialize(pUSBHandle);

    pUSBHandle = NULL;

    if (irq_is_enabled(USB_IRQ)) {
        irq_disable(USB_IRQ);
    }

    return 0;
}
